# Teye-Contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  setup.sh
.github/workflows/: ci.yml  mutation.yml
contracts/common/: Cargo.toml
contracts/common/src/: consent.rs  keys.rs  lib.rs  multisig.rs
contracts/compliance/: Cargo.toml
contracts/compliance/src/: access_control.rs  audit.rs  baa.rs  lib.rs  retention.rs
contracts/compliance/tests/: core.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: credential.rs  did.rs  lib.rs  recovery.rs
contracts/identity/tests/: core.rs
contracts/vision_records/: Cargo.toml
contracts/vision_records/src/: lib.rs
contracts/vision_records/tests/: core.rs
contracts/vision_records/tests/proptest-regressions/: core.txt  rbac.txt  state_machine.txt
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: audit.rs  helpers.rs  lib.rs  verifier.rs
contracts/zk_verifier/tests/: test_zk_access.rs
docs/: ZK_INTEGRATION.md  api.md  architecture.md
scripts/: deploy.sh
