[workspace]
resolver = "2"

members = [
    "contracts/*",
]

[workspace.package]
version = "1.1.0"
authors = ["Stellar-Teye Contributors"]
license = "MIT"
edition = "2021"
repository = "https://github.com/Stellar-Teye/Teye-Contracts"
rust-version = "1.78"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
